--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -137,7 +137,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d124e4v75n9sum.cloudfront.net/O7ypozeZq"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d13zv7yhtbxwll.cloudfront.net/L6ipozeZy"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -218,7 +218,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
